@startuml
skinparam classAttributeIconSize 0

package "entity" {
    class Card {
        - id: Long
        - name: String
        - expansion: String
        - type: String
        - price: BigDecimal
        - year: int
    }

    class UserCard {
        - card: Card
        - note: String
        - quantity: int
        - condition: String
        + getCard(): Card
        + getNote(): String
        + getQuantity(): int
        + getCondition(): String
        + setNote(note: String): void
        + setQuantity(quantity: int): void
        + setCondition(condition: String): void
    }

    class Album {
        - name: String
        - cards: List<UserCard>
        + addCard(card: UserCard): void
        + removeCard(card: Card): void
        + getCards(): List<UserCard>
    }

    class Collection {
        - albums: List<Album>
        + addAlbum(album: Album): void
        + getAlbum(name: String): Album
        + getAlbums(): List<Album>
    }

    class User {
        - id: Long
        - username: String
        - password: String
        - collection: Collection
    }

    UserCard --> Card
    Album --> UserCard
    Collection --> Album
    User --> Collection
}

package "pricing" {
    interface PriceProvider {
        + getPrice(card: Card): BigDecimal
    }

    class StaticCatalogPriceProvider {
        + getPrice(card: Card): BigDecimal
    }

    PriceProvider <|.. StaticCatalogPriceProvider
    StaticCatalogPriceProvider --> Card
}

package "service" {
    class CatalogService {
        - catalog: List<Card>
        + getAllCards(): List<Card>
        + filterCards(strategy: FilterStrategy): List<Card>
        + findCardByName(name: String): Card
    }

    class CollectionService {
        + addCardToAlbum(user: User, card: Card, album: Album, note: String): void
        + removeCardFromAlbum(user: User, card: Card, album: Album): void
    }

    class CollectionValuationService {
        - priceProvider: PriceProvider
        + getAlbumValue(album: Album): BigDecimal
        + getCollectionValue(user: User): BigDecimal
        + getTotalCards(user: User): int
        + getAverageCardValue(user: User): BigDecimal
        + getMostValuableCards(user: User, limit: int): List<UserCard>
    }

    class ReportService {
        - valuationService: CollectionValuationService
        + exportCollectionReport(user: User, filePath: String): void
    }

    class UserService {
        + login(username: String, password: String): User
    }
}

package "repository" {
    class CardLoader {
        + loadCards(): List<Card>
    }

    class UserCollectionRepository {
        + saveCollection(user: User, filePath: String): void
    }
}

package "factory" {
    class CardFactory {
        + createCard(data: Map<String, Object>): Card
    }
}

package "strategy" {
    interface FilterStrategy {
        + filter(cards: List<Card>): List<Card>
    }

    class FilterByName {
        - keyword: String
        + filter(cards: List<Card>): List<Card>
    }

    class FilterByType {
        - type: String
        + filter(cards: List<Card>): List<Card>
    }

    FilterStrategy <|.. FilterByName
    FilterStrategy <|.. FilterByType
}

package "facade" {
    class UserFacade {
        - catalogService: CatalogService
        - collectionService: CollectionService
        - valuationService: CollectionValuationService
        + getCatalog(): List<Card>
        + filterCatalog(strategy: FilterStrategy): List<Card>
        + aggiungiCarta(user: User, card: Card, album: Album, note: String): void
        + rimuoviCarta(user: User, card: Card, album: Album): void
        + mostraValoreCollezione(user: User): BigDecimal
        + mostraValoreAlbum(album: Album): BigDecimal
    }
}

CatalogService --> CardLoader
CatalogService --> FilterStrategy
CardLoader --> CardFactory
CardFactory --> Card

CollectionService --> User
CollectionService --> Album
CollectionService --> UserCard

CollectionValuationService --> User
CollectionValuationService --> Album
CollectionValuationService --> UserCard
CollectionValuationService --> PriceProvider

ReportService --> CollectionValuationService
ReportService --> User
ReportService --> Album
ReportService --> UserCard

UserCollectionRepository --> User
UserCollectionRepository --> Album
UserCollectionRepository --> UserCard
UserCollectionRepository --> Card

UserFacade --> CatalogService
UserFacade --> CollectionService
UserFacade --> CollectionValuationService

@enduml
